# cbt-llm

./: .env.example  .gitignore  Makefile  README.md  TRANSCRIPT_PIPELINE_DESIGN.md  app.py  bash.sh  concept_usage.csv  concepts_mental_findings_nodes.csv  force_gemma.csv  force_gpt.csv  force_mistral.csv  mental_findings_nodes.csv  mental_findings_rels.csv  mental_nodes.csv  mental_relationships.csv  output-CBT-Nodes.csv  output-CBT-Rel.csv  pyproject.toml  requirements.txt  results_gemma.csv  results_gpt.csv  results_mistral.csv  run_experiments.sh  run_experiments_ablation.sh  run_experiments_safety.sh  run_models.sh  shift_gemma.csv  shift_gpt.csv  shift_mistral.csv  shifts_per_turn.csv  wilcoxon_shift.csv
app/: streamlit_app.py
appropriateness-results/: cot-gpt-4.json  mcot-gemma-2.json
appropriateness_results/: cot-deepseek-3.json  mcot-mistral-1.json
data/processed/: ablation_case_studies.json  realcbt.json  user_case_studies.json  user_case_studies_safety.json
data/raw/: RealCBT_Dataset_Metadata.xlsx  distractions.json  realcbt_metadata.json
docs/: mkdocs.yml
human_eval/: cot-deepseek-3.csv  cot-gpt-4.csv  mcot-gemma-2.csv  mcot-mistral-1.csv
human_eval_study_1/: cot-deepseek-3.csv  mcot-gemma-2.csv  mcot-mistral-1.csv
human_eval_study_2/: convo_1_gpt.csv  convo_2_gemma.csv  convo_3_mistral.csv
inter_rater_evall/: fleiss_kappa.py  fleiss_kappa_category.py  protocol_summary.csv
notebooks/: clean_gpt_conversations.ipynb  extract_user_schema.ipynb  graphrag.ipynb
references/: cbt-protocols.json
vader_validation/: esconv_processing.ipynb
(+6911 files in other folders)
